--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
         <button id="start-btn" class="icon-btn"></button> <!-- Icône de start, touche pour commencer -->
     </div>
 
-    <!-- Mode parent (instructions en français) -->
+    <!-- Mode parent (instructions en franais) -->
     <div id="parent-mode" class="overlay">
         <div class="parent-content">
             <h2>Mode Parent</h2>
