Mise à jour de l’application avec carrousel pour plusieurs mots

--- a/Index.html
+++ b/Index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
   <div class="container">
-    <img src="assets/cat.png" alt="Cat" class="image">
-    <h1>Cat</h1>
-    <button onclick="playSound('assets/cat.mp3')">Listen</button>
+    <img src="assets/cat.png" alt="Word" class="image" id="wordImage">
+    <h1 id="wordText">Cat</h1>
+    <button onclick="playSound()">Listen</button>
+    <button onclick="nextWord()">Next</button>
   </div>
   <script src="script.js"></script>
 </body>
